--- a/product.html
+++ b/product.html
@@ -136,10 +136,10 @@
           <div class="row row-cols-2 row-cols-lg-3 g-4">
             <div class="col overflow-hidden">
               <div
-                class="card w-100 position-relation product_hover"
+                class="card w-100 position-relation newproduct_img"
                 data-num="1"
               >
-                <div class="new_product_img">
+                <div class="newproduct_cloth">
                   <h6>Player</h6>
                   <h4>Kobe Bryant</h4>
                 </div>
@@ -155,10 +155,10 @@
             </div>
             <div class="col">
               <div
-                class="card w-100 position-relation product_hover"
+                class="card w-100 position-relation newproduct_img"
                 data-num="2"
               >
-                <div class="new_product_img">
+                <div class="newproduct_cloth">
                   <h6>Player</h6>
                   <h4>Derrick Rose</h4>
                 </div>
@@ -174,10 +174,10 @@
             </div>
             <div class="col">
               <div
-                class="card w-100 position-relation product_hover"
+                class="card w-100 position-relation newproduct_img"
                 data-num="3"
               >
-                <div class="new_product_img">
+                <div class="newproduct_cloth">
                   <h6>Player</h6>
                   <h4>Kevin Durant</h4>
                 </div>
@@ -193,10 +193,10 @@
             </div>
             <div class="col">
               <div
-                class="card w-100 position-relation product_hover"
+                class="card w-100 position-relation newproduct_img"
                 data-num="4"
               >
-                <div class="new_product_img">
+                <div class="newproduct_cloth">
                   <h6>Player</h6>
                   <h4>Stephen Curry</h4>
                 </div>
