完成：燈箱的相簿!!!

--- a/index.html
+++ b/index.html
@@ -172,14 +172,12 @@
       <section
         class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-6 px-0 px-lg-7 g-5"
       >
-        <div
-          class="col d-flex align-items-center justify-content-center me-md-5"
-        >
+        <div class="col me-md-5">
           <a
             class="example-image-link position-relative d-flex justify-content-center align-items-center"
-            href="../nbaWeb/2-21325_nba-all-star-game-poster.jpg"
+            href="../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
             data-lightbox="example-1"
-            data-title="Optional caption."
+            data-title=" welcome to apply to be members."
           >
             <img
               class="of-cover w-100 love_img example-image"
@@ -191,6 +189,20 @@
             <div class="love_img_back"></div>
           </a>
         </div>
+        <!-- 用絕對定位隱藏!! -->
+        <a
+          class="example-image-link position-absolute"
+          href="../nbaWeb/1126209.png"
+          data-lightbox="example-1"
+          data-title=" welcome to apply to be members."
+        ></a>
+        <a
+          class="example-image-link position-absolute"
+          href="../nbaWeb/PNG-images-NBA-Players-36png.png"
+          data-lightbox="example-1"
+          data-title=" welcome to apply to be members."
+        ></a>
+        <!--  -->
         <div class="col">
           <div class="money w-100">
             <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
