處理部分背景解析度不足

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="12000">
+          <div class="carousel-item active" data-bs-interval="5000">
             <!-- 加寬度100%不錯位跑版 -->
             <video width="1440" height="810" class="w-100" controls muted>
               <source
@@ -206,7 +206,10 @@
         <div class="col">
           <div class="money w-100">
             <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
-            <h2 class="text-center text-lg-start">EVERYBODY FUNDRAISING</h2>
+            <h2 class="text-center text-lg-start">
+              EVERYBODY <br class="d-block d-lg-none" />
+              FUNDRAISING
+            </h2>
             <p class="fs-6">
               The Association of Jersey Charities exists to provide guidance to
               and be a source of funding for its members. <br />
