--- a/rank.html
+++ b/rank.html
@@ -12,12 +12,12 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+      <navbar class="navbar navbar-expand-md bg-white py-4">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="navbar-brand" href="index.html">JerseyTown</a>
             <a class="align-self-center text-decoration-none" href="index.html">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2 nav_h1">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
@@ -40,25 +40,28 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a class="nav-link p-3" aria-current="page" href="index.html"
+                <a
+                  class="nav-link px-4 py-3"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Service">Service</a>
+                <a class="nav-link px-4 py-3" href="story.html">Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="newproduct.html">Product</a>
+                <a class="nav-link px-4 py-3" href="product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="allstar.html">Rank</a>
+                <a class="nav-link px-4 py-3" href="rank.html">Rank</a>
               </li>
-              <li class="hvr-grow-shadow ms-1">
+              <li class="ms-1">
                 <button
-                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
+                  class="btn btn-nbaRed rounded-pill mt-lg-2 bg-nbaBlue nav_pill"
                 >
                   <a
-                    class="text-decoration-none text-white fs-6"
+                    class="text-decoration-none fs-6 px-3 rounded-pill text-white"
                     type="submit"
                     href="customzied.html"
                   >
@@ -69,15 +72,19 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </navbar>
       <!-- banner -->
       <section
-        class="allstar_banner w-100 bgp-center bgs-cover"
-        style="background-image: url(../../nbaWeb/banner3.jpg)"
+        class="allstar_banner bgp-center bgs-contain"
+        style="
+          background-image: url(./nbaWeb/allstar-2016-011016-top-1.jpg);
+          background-repeat: no-repeat;
+          height: 550px;
+        "
       ></section>
       <!-- ranking -->
       <section
-        class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3 justify-content-around"
+        class="row row-cols-1 row-cols-xl-5 mx-5 g-3 justify-content-around"
       >
         <!-- col-12 col-xl-2 多餘的 -->
         <div
