--- a/story.html
+++ b/story.html
@@ -12,12 +12,12 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+      <navbar class="navbar navbar-expand-md bg-white py-4">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="navbar-brand" href="index.html">JerseyTown</a>
             <a class="align-self-center text-decoration-none" href="index.html">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2 nav_h1">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
@@ -40,25 +40,28 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a class="nav-link p-3" aria-current="page" href="index.html"
+                <a
+                  class="nav-link px-4 py-3"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Service">Service</a>
+                <a class="nav-link px-4 py-3" href="story.html">Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="newproduct.html">Product</a>
+                <a class="nav-link px-4 py-3" href="product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="allstar.html">Rank</a>
+                <a class="nav-link px-4 py-3" href="rank.html">Rank</a>
               </li>
-              <li class="hvr-grow-shadow ms-1">
+              <li class="ms-1">
                 <button
-                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
+                  class="btn btn-nbaRed rounded-pill mt-lg-2 bg-nbaBlue nav_pill"
                 >
                   <a
-                    class="text-decoration-none text-white fs-6"
+                    class="text-decoration-none fs-6 px-3 rounded-pill text-white"
                     type="submit"
                     href="customzied.html"
                   >
@@ -69,11 +72,11 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </navbar>
       <!-- 銷售排行 -->
       <div
         id="Ranking"
-        class="d-flex justify-content-center align-items-center text-dark mt-5"
+        class="d-flex justify-content-center align-items-center text-dark newproduct_margin border-3 border-nbaBlue border-top pt-5"
       >
         <h2>PLAYER</h2>
         <img
@@ -113,7 +116,7 @@
             </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none  pb-2 text-dark"
+                class="d-block text-center text-decoration-none  pb-2 rank_a text-dark"
                 >MORE</a
               >
           </div>
@@ -140,7 +143,7 @@
             </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 stretched-link"
+                class="d-block text-center text-decoration-none text-dark pb-2 rank_a stretched-link"
                 >MORE</a
               >
           </div>
@@ -169,7 +172,7 @@
             </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 "
+                class="d-block text-center text-decoration-none text-dark pb-2 rank_a "
                 >MORE</a
               >
           </div>
@@ -198,7 +201,7 @@
             </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 "
+                class="d-block text-center text-decoration-none text-dark pb-2 rank_a "
                 >MORE</a
               >
           </div>
@@ -227,7 +230,7 @@
             </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 ""
+                class="d-block text-center text-decoration-none text-dark pb-2 rank_a ""
                 >MORE</a
               >
           </div>
@@ -256,7 +259,7 @@
             </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2"
+                class="d-block text-center text-decoration-none text-dark pb-2 rank_a"
                 >MORE</a
               >
           </div>
