--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         ></a>
         <!--  -->
         <div class="col">
-          <div class="money w-100">
+          <div class="money w-100 animated_right">
             <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
             <h2 class="text-center text-lg-start">
               EVERYBODY <br class="d-block d-lg-none" />
@@ -241,13 +241,12 @@
       </div>
       <section class="row row-cols-2 row-cols-lg-4 g-4 px-3">
         <div class="col overflow-hidden">
-          <div class="card w-100 position-relation newproduct_img" data-num="1">
+          <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
               <h4>Kobe Bryant</h4>
             </div>
             <img
-              data-num="1"
               height="312"
               width="312"
               class="card-img of-cover"
@@ -257,13 +256,12 @@
           </div>
         </div>
         <div class="col">
-          <div class="card w-100 position-relation newproduct_img" data-num="2">
+          <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
               <h4>Derrick Rose</h4>
             </div>
             <img
-              data-num="2"
               height="312"
               width="312"
               class="card-img of-cover newproduct_img"
@@ -273,13 +271,12 @@
           </div>
         </div>
         <div class="col">
-          <div class="card w-100 position-relation newproduct_img" data-num="3">
+          <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
               <h4>Kevin Durant</h4>
             </div>
             <img
-              data-num="3"
               height="312"
               width="312"
               class="card-img of-cover newproduct_img"
@@ -289,13 +286,12 @@
           </div>
         </div>
         <div class="col">
-          <div class="card w-100 position-relation newproduct_img" data-num="4">
+          <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
               <h4>Stephen Curry</h4>
             </div>
             <img
-              data-num="4"
               height="312"
               width="312"
               class="card-img of-cover newproduct_img"
@@ -344,13 +340,12 @@
         <div class="col mb-5 mb-lg-0">
           <div class="card" style="height: 424px">
             <img
-              data-num="001"
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
               height="300"
-              class="card-img-top of-none op-top position-absolute mt-n5 position-relative"
+              class="card-img-top animated_down of-none op-top position-absolute mt-n5 position-relative"
               alt="..."
             />
-            <div data-num="001" class="img_back img_back_kobe"></div>
+            <div class="img_back img_back_kobe"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">kobe bryant</h3>
               <p class="card-text fs-6">
@@ -374,13 +369,12 @@
         <div class="col mb-5 mb-lg-0">
           <div class="card position-relative" style="height: 424px">
             <img
-              data-num="002"
               src="nbaWeb/PNG-images-NBA-Players-28png.png"
               height="300"
-              class="card-img-top of-none op-top position-absolute mt-n5"
+              class="card-img-top animated_down of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="002" class="img_back img_back_lebron"></div>
+            <div class="img_back img_back_lebron"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">LeBron James</h3>
               <p class="card-text fs-6">
@@ -401,13 +395,12 @@
         <div class="col mb-3 mb-lg-0">
           <div class="card position-relative" style="height: 424px">
             <img
-              data-num="003"
               src="nbaWeb/PNG-images-NBA-Players-1png.png"
               height="300"
-              class="card-img-top of-none op-top position-absolute mt-n5"
+              class="card-img-top animated_down of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="003" class="img_back img_back_curry"></div>
+            <div class="img_back img_back_curry"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">Stephen Curry</h3>
               <p class="card-text fs-6">
