完成：統一導覽列、首尾

--- a/index.html
+++ b/index.html
@@ -121,9 +121,16 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="5000">
+          <div class="carousel-item active" data-bs-interval="3000">
             <!-- 加寬度100%不錯位跑版 -->
-            <video width="1440" height="810" class="w-100" controls muted>
+            <video
+              width="1440"
+              height="810"
+              class="w-100"
+              controls
+              muted
+              autoplay
+            >
               <source
                 src="./nbaWeb/Miami Heat vs. Memphis Grizzlies Full Game Highlights _ Oct 7 _ 2022 NBA Preseason.mp4"
                 type="video/mp4"
@@ -240,7 +247,7 @@
         <h2>PRODUCTS</h2>
       </div>
       <section class="row row-cols-2 row-cols-lg-4 g-4 px-3">
-        <div class="col overflow-hidden">
+        <div class="col animated_right">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -255,7 +262,7 @@
             />
           </div>
         </div>
-        <div class="col">
+        <div class="col animated_right">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -270,7 +277,7 @@
             />
           </div>
         </div>
-        <div class="col">
+        <div class="col animated_right">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -285,7 +292,7 @@
             />
           </div>
         </div>
-        <div class="col">
+        <div class="col animated_right">
           <div class="card w-100 position-relation newproduct_img">
             <div class="newproduct_cloth">
               <h6>Player</h6>
@@ -358,12 +365,12 @@
                 Memorial Basketball Hall of Fame in 2020 and named to the NBA
                 75th Anniversary Team in 2021.
               </p>
+              <a
+                href="storyItem.html"
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
+                >MORE</a
+              >
             </div>
-            <a
-              href="storyItem.html"
-              class="text-center text-decoration-none pb-2 stretched-link text-dark rank_a"
-              >MORE</a
-            >
           </div>
         </div>
         <div class="col mb-5 mb-lg-0">
@@ -384,12 +391,12 @@
                 playoffs, the second most career points, and has the seventh
                 most career assists.
               </p>
+              <a
+                href="storyItem.html"
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
+                >MORE</a
+              >
             </div>
-            <a
-              href="storyItem.html"
-              class="text-center text-decoration-none pb-2 stretched-link text-dark rank_a"
-              >MORE</a
-            >
           </div>
         </div>
         <div class="col mb-3 mb-lg-0">
@@ -412,12 +419,12 @@
                 in an NBA season en route to reaching the 2016 NBA Finals, which
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
+              <a
+                href="storyItem.html"
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
+                >MORE</a
+              >
             </div>
-            <a
-              href="storyItem.html"
-              class="text-center text-decoration-none pb-2 btn-outline-dark text-dark rank_a"
-              >MORE</a
-            >
           </div>
         </div>
       </section>
