--- a/story.html
+++ b/story.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JerseyTown</title>
 
+    <meta name="description" content="用球衣蓋起來的城鎮" />
+    <meta
+      name="keywords "
+      content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
+    <meta property="og:title" content="JerseyTown" />
+    <meta property="og:description" content="球衣,用球衣蓋的城鎮,JerseyTown" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://JerseyTown.com.tw" />
+    <meta
+      property="og:image"
+      src="./nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg"
+    />
+    <!-- 標題欄： -->
+    <link rel="icon" href="./nbaWeb/favicon.ico" type="image/x-icon" />
+    <!-- 收藏夾： -->
+    <link rel="shortcut icon" href="./nbaWeb/favicon.ico" type="image/x-icon" /
+    >
+
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
 
@@ -76,7 +95,8 @@
       <!-- 銷售排行 -->
       <div
         id="Ranking"
-        class="d-flex justify-content-center align-items-center text-dark newproduct_margin border-3 border-nbaBlue border-top pt-5"
+        class="d-flex justify-content-center align-items-center text-dark border-3 border-nbaBlue border-top pt-5"
+        style="margin-top: 104px !important"
       >
         <h2>PLAYER</h2>
         <img
@@ -92,7 +112,7 @@
       </p>
       <section class="row row-cols-1 row-cols-lg-3 rank_card mx-2">
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card " style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="001"
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
@@ -113,12 +133,12 @@
                 Memorial Basketball Hall of Fame in 2020 and named to the NBA
                 75th Anniversary Team in 2021.
               </p>
-            </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none  pb-2 rank_a text-dark"
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
                 >MORE</a
               >
+            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -140,12 +160,12 @@
                 playoffs, the second most career points, and has the seventh
                 most career assists.
               </p>
-            </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 rank_a stretched-link"
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
                 >MORE</a
               >
+            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -169,16 +189,16 @@
                 in an NBA season en route to reaching the 2016 NBA Finals, which
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
-            </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 rank_a "
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
                 >MORE</a
               >
+            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card " style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="004"
               src="nbaWeb/PNG-images-NBA-Players-58png.png"
@@ -198,12 +218,12 @@
                 in an NBA season en route to reaching the 2016 NBA Finals, which
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
-            </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 rank_a "
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
                 >MORE</a
               >
+            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -227,16 +247,16 @@
                 in an NBA season en route to reaching the 2016 NBA Finals, which
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
-            </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 rank_a ""
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
                 >MORE</a
               >
+            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card  " style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="006"
               src="nbaWeb/PNG-images-NBA-Players-70png.png"
@@ -256,12 +276,12 @@
                 in an NBA season en route to reaching the 2016 NBA Finals, which
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
-            </div>
               <a
                 href="storyItem.html"
-                class="d-block text-center text-decoration-none text-dark pb-2 rank_a"
+                class="text-decoration-none stretched-link text-dark rank_a d-flex justify-content-center"
                 >MORE</a
               >
+            </div>
           </div>
         </div>
       </section>
@@ -280,11 +300,11 @@
         </ul>
       </div>
       <!-- 徵才 -->
-      <div class="container-lg border-nbaRed border-top border-3">
+      <section class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
-          <div class="col d-flex justify-content-center mb-3 mb-md-0">
+          <div class="col d-flex justify-content-center mb-3 mb-lg-0">
             <!-- ms-auto 可推動本身寬度 -->
             <!-- 不用設定小於md 要設定0 就不會在RWD跑版 ~~~~-->
             <img
@@ -296,7 +316,9 @@
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -311,34 +333,34 @@
             <div class="me-lg-auto">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- 小圖示 -->
-      <div class="position-relation">
-        <a href="#">
-          <img
-            onmouseover="hover_custom(this);"
-            onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-05.svg"
-            alt=""
-            height="150"
-            width="150"
-            class="custom_img_after position-fixed bottom-0 end-0"
-            data-bs-toggle="tooltip"
-            data-bs-placement="top"
-            title="Let's customized jersey !"
-          />
-        </a>
-      </div>
+      <a href="customzied.html">
+        <img
+          onmouseover="hover_custom(this);"
+          onmouseout="unhover_custom(this);"
+          src="./nbaWeb/silhouette-basket-05.svg"
+          alt=""
+          height="150"
+          width="150"
+          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="Let's customized jersey !"
+        />
+      </a>
 
-      <div class="footer bg-nbaRed text-center text-white py-2 pt-4">
+      <footer class="footer bg-dark text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
-      </div>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
