--- a/customzied.html
+++ b/customzied.html
@@ -6,18 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JerseyTown</title>
 
+    <meta name="description" content="用球衣蓋起來的城鎮" />
+    <meta
+      name="keywords "
+      content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
+    <meta property="og:title" content="JerseyTown" />
+    <meta property="og:description" content="球衣,用球衣蓋的城鎮,JerseyTown" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://JerseyTown.com.tw" />
+    <meta
+      property="og:image"
+      src="./nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg"
+    />
+    <!-- 標題欄： -->
+    <link rel="icon" href="./nbaWeb/favicon.ico" type="image/x-icon" />
+    <!-- 收藏夾： -->
+    <link rel="shortcut icon" href="./nbaWeb/favicon.ico" type="image/x-icon" /
+    >
+
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
 
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+      <navbar class="navbar navbar-expand-md bg-white py-4">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="navbar-brand" href="index.html">JerseyTown</a>
             <a class="align-self-center text-decoration-none" href="index.html">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2 nav_h1">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
@@ -40,25 +59,28 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a class="nav-link p-3" aria-current="page" href="index.html"
+                <a
+                  class="nav-link px-4 py-3"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="#Service">Service</a>
+                <a class="nav-link px-4 py-3" href="story.html">Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="newproduct.html">Product</a>
+                <a class="nav-link px-4 py-3" href="product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="allstar.html">Rank</a>
+                <a class="nav-link px-4 py-3" href="rank.html">Rank</a>
               </li>
-              <li class="hvr-grow-shadow ms-1">
+              <li class="ms-1">
                 <button
-                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
+                  class="btn btn-nbaRed rounded-pill mt-lg-2 bg-nbaBlue nav_pill"
                 >
                   <a
-                    class="text-decoration-none text-white fs-6"
+                    class="text-decoration-none fs-6 px-3 rounded-pill text-white"
                     type="submit"
                     href="customzied.html"
                   >
@@ -69,12 +91,13 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </navbar>
       <!-- banner -->
       <section
         class="custom_banner bgp-top bgs-cover w-100"
         style="
           background-image: url(../../nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
+          margin-top: 104px !important;
         "
       ></section>
       <!-- 註冊客製化球衣 -->
@@ -234,7 +257,7 @@
       </form>
 
       <!-- 徵才 -->
-      <div class="container-lg border-nbaRed border-top border-3">
+      <section class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
@@ -252,7 +275,7 @@
               <p>jersey fundraising</p>
               <a
                 href="customzied.html"
-                class="btn btn-outline-nbaBlue rounded-pill fs-5"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -269,34 +292,32 @@
               <p>customized jersey</p>
               <a
                 href="customzied.html"
-                class="btn btn-outline-nbaBlue rounded-pill fs-5"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- 小圖示 -->
-      <div class="position-relation">
-        <a href="#">
-          <img
-            onmouseover="hover_custom(this);"
-            onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-05.svg"
-            alt=""
-            height="150"
-            width="150"
-            class="custom_img_after position-fixed bottom-0 end-0"
-            data-bs-toggle="tooltip"
-            data-bs-placement="top"
-            title="Let's customized jersey !"
-          />
-        </a>
-      </div>
+      <a href="customzied.html">
+        <img
+          onmouseover="hover_custom(this);"
+          onmouseout="unhover_custom(this);"
+          src="./nbaWeb/silhouette-basket-05.svg"
+          alt=""
+          height="150"
+          width="150"
+          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="Let's customized jersey !"
+        />
+      </a>
 
-      <div class="footer bg-nbaRed text-center text-white py-2 pt-4">
+      <footer class="footer bg-dark text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
-      </div>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
