--- a/product.html
+++ b/product.html
@@ -94,7 +94,8 @@
       </navbar>
       <!-- 最新球衣 -->
       <div
-        class="my-5 d-flex justify-content-center align-items-center newproduct_margin border-3 border-nbaBlue border-top pt-5"
+        class="my-5 d-flex justify-content-center align-items-center border-3 border-nbaBlue border-top pt-5"
+        style="margin-top: 104px !important"
       >
         <h2>NEW</h2>
         <img
@@ -236,7 +237,7 @@
       </section>
 
       <!-- 徵才 -->
-      <div class="container-lg border-nbaBlue border-top border-3">
+      <section class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
@@ -254,7 +255,7 @@
               <p>jersey fundraising</p>
               <a
                 href="customzied.html"
-                class="btn btn-outline-nbaBlue rounded-pill fs-5"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -271,34 +272,32 @@
               <p>customized jersey</p>
               <a
                 href="customzied.html"
-                class="btn btn-outline-nbaBlue rounded-pill fs-5"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- 小圖示 -->
-      <div class="position-relation">
-        <a href="#">
-          <img
-            onmouseover="hover_custom(this);"
-            onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-05.svg"
-            alt=""
-            height="150"
-            width="150"
-            class="custom_img_after position-fixed bottom-0 end-0"
-            data-bs-toggle="tooltip"
-            data-bs-placement="top"
-            title="Let's customized jersey !"
-          />
-        </a>
-      </div>
+      <a href="customzied.html">
+        <img
+          onmouseover="hover_custom(this);"
+          onmouseout="unhover_custom(this);"
+          src="./nbaWeb/silhouette-basket-05.svg"
+          alt=""
+          height="150"
+          width="150"
+          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="Let's customized jersey !"
+        />
+      </a>
 
-      <div class="footer bg-nbaBlue text-center text-white py-2 pt-4">
+      <footer class="footer bg-dark text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
-      </div>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
