--- a/rank.html
+++ b/rank.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JerseyTown</title>
 
+    <meta name="description" content="用球衣蓋起來的城鎮" />
+    <meta
+      name="keywords "
+      content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
+    <meta property="og:title" content="JerseyTown" />
+    <meta property="og:description" content="球衣,用球衣蓋的城鎮,JerseyTown" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://JerseyTown.com.tw" />
+    <meta
+      property="og:image"
+      src="./nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg"
+    />
+    <!-- 標題欄： -->
+    <link rel="icon" href="./nbaWeb/favicon.ico" type="image/x-icon" />
+    <!-- 收藏夾： -->
+    <link rel="shortcut icon" href="./nbaWeb/favicon.ico" type="image/x-icon" /
+    >
+
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
 
@@ -198,7 +217,7 @@
       </section>
 
       <!-- 徵才 -->
-      <div class="container-lg border-nbaRed border-top border-3">
+      <section class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
@@ -216,7 +235,7 @@
               <p>jersey fundraising</p>
               <a
                 href="customzied.html"
-                class="btn btn-outline-nbaBlue rounded-pill fs-5"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -233,34 +252,32 @@
               <p>customized jersey</p>
               <a
                 href="customzied.html"
-                class="btn btn-outline-nbaBlue rounded-pill fs-5"
+                class="btn btn-outline-dark rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- 小圖示 -->
-      <div class="position-relation">
-        <a href="#">
-          <img
-            onmouseover="hover_custom(this);"
-            onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-05.svg"
-            alt=""
-            height="150"
-            width="150"
-            class="custom_img_after position-fixed bottom-0 end-0"
-            data-bs-toggle="tooltip"
-            data-bs-placement="top"
-            title="Let's customized jersey !"
-          />
-        </a>
-      </div>
+      <a href="customzied.html">
+        <img
+          onmouseover="hover_custom(this);"
+          onmouseout="unhover_custom(this);"
+          src="./nbaWeb/silhouette-basket-05.svg"
+          alt=""
+          height="150"
+          width="150"
+          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="Let's customized jersey !"
+        />
+      </a>
 
-      <div class="footer bg-nbaRed text-center text-white py-2 pt-4">
+      <footer class="footer bg-dark text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
-      </div>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
