--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JerseyTown</title>
+    <title>HOME - JTown</title>
 
-    <meta name="description" content="用球衣蓋起來的城鎮" />
+    <meta
+      name="description"
+      content="用球衣蓋起來的城鎮,球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
     <meta
       name="keywords "
       content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
     />
-    <meta property="og:title" content="JerseyTown" />
-    <meta property="og:description" content="球衣,用球衣蓋的城鎮,JerseyTown" />
+    <meta property="og:title" content="HOME - JTown" />
+    <meta
+      property="og:description"
+      content="球衣,用球衣蓋的城鎮,球衣,城鎮,JerseyTown"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://JerseyTown.com.tw" />
     <meta
