--- a/product.html
+++ b/product.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JerseyTown</title>
+    <title>NEW JERSEY PRODUCT - JTown</title>
 
     <meta name="description" content="用球衣蓋起來的城鎮" />
     <meta
       name="keywords "
       content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
     />
-    <meta property="og:title" content="JerseyTown" />
+    <meta property="og:title" content="NEW JERSEY PRODUCT - JTow" />
     <meta property="og:description" content="球衣,用球衣蓋的城鎮,JerseyTown" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://JerseyTown.com.tw" />
