--- a/storyItem.html
+++ b/storyItem.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JerseyTown</title>
+    <title>KOBE STORY - JTown</title>
+
+    <meta
+      name="description"
+      content="用球衣蓋起來的城鎮,球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
+    <meta
+      name="keywords "
+      content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
+    <meta property="og:title" content="KOBE STORY - JTown" />
+    <meta
+      property="og:description"
+      content="球衣,用球衣蓋的城鎮,球衣,城鎮,JerseyTown"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://JerseyTown.com.tw" />
+    <meta
+      property="og:image"
+      src="./nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg"
+    />
+    <!-- 標題欄： -->
+    <link rel="icon" href="./nbaWeb/favicon.ico" type="image/x-icon" />
+    <!-- 收藏夾： -->
+    <link rel="shortcut icon" href="./nbaWeb/favicon.ico" type="image/x-icon" /
+    >
 
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
