--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="col me-md-5">
           <a
             class="example-image-link position-relative d-flex justify-content-center align-items-center"
-            href="../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
+            href="./nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
             data-lightbox="example-1"
             data-title=" welcome to apply to be members."
           >
@@ -205,13 +205,13 @@
         <!-- 用絕對定位隱藏!! -->
         <a
           class="example-image-link position-absolute"
-          href="../nbaWeb/1126209.png"
+          href="./nbaWeb/1126209.png"
           data-lightbox="example-1"
           data-title=" welcome to apply to be members."
         ></a>
         <a
           class="example-image-link position-absolute"
-          href="../nbaWeb/PNG-images-NBA-Players-36png.png"
+          href="./nbaWeb/PNG-images-NBA-Players-36png.png"
           data-lightbox="example-1"
           data-title=" welcome to apply to be members."
         ></a>
