修正：背景圖路徑

--- a/customzied.html
+++ b/customzied.html
@@ -96,7 +96,7 @@
       <section
         class="custom_banner bgp-top bgs-cover w-100"
         style="
-          background-image: url(../nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
+          background-image: url(nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
           margin-top: 104px !important;
         "
       ></section>
