--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./javascripts/lightbox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="./javascripts/main.js"></script>
   </body>
 </html>
