修正：說明檔及引入node說明

--- a/index.html
+++ b/index.html
@@ -519,7 +519,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="./javascripts/lightbox.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <!-- 有npm引入了 -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script> -->
     <script src="./javascripts/main.js"></script>
   </body>
 </html>
